# solana-phonebook

./: README.md  package-lock.json  package.json  tsconfig.base.json
anchor/: Anchor.toml  package.json
anchor/programs/counter/src/: lib.rs
anchor/programs/phonebook/: Cargo.toml
anchor/programs/phonebook/src/: lib.rs
anchor/src/: index.ts  phonebook-exports.ts
anchor/tests/: phonebook.spec.ts
web/app/: layout.tsx  react-query-provider.tsx
web/app/phonebook/: page.tsx
web/components/PhoneBook/: phonebook-data-access.tsx  phonebook-feature.tsx  phonebook-ui.tsx
web/components/account/: account-data-access.tsx
web/components/counter/: counter-data-access.tsx
web/components/ui/: ui-layout.tsx
